# music21-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  test_chord_prog.mid
.github/workflows/: tests.yml
src/music21_mcp/: __init__.py  server.py  tools.py
src/music21_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/music21_mcp/tools/: __init__.py  analyze_chord_progression.py  analyze_form.py  analyze_key.py  change_velocity.py  detect_modulations.py  export_midi.py  extract_melody.py  harmonize_melody.py  merge_midi.py  modify_notes.py  parse_midi.py  quantize_midi.py  reharmonize.py  replace_chord_at.py  search_pattern.py  transpose_midi.py
tests/: test_analyze_chord_progression.py  test_analyze_form.py  test_analyze_key.py  test_change_velocity.py  test_detect_modulations.py  test_e2e_mcp.py  test_export_midi.py  test_extract_melody.py  test_harmonize_melody.py  test_import.py  test_merge_midi.py  test_modify_notes.py  test_parse_midi.py  test_quantize_midi.py  test_reharmonize.py  test_replace_chord_at.py  test_search_pattern.py  test_server.py  test_transpose_midi.py
